@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.22887 2023/05/04 11:35:34 wiz Exp $
+$NetBSD: TODO,v 1.22888 2023/05/04 11:47:34 wiz Exp $
 
 Suggested new packages
 ======================
@@ -611,8 +611,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o esh-0.8.5
 	o ess-18.10.2
 	o etach-1.4.1
-	o etm-3.0.43 [wip/py-etmtk]
-	o etm-891
 	o evas-buffer-1.7.10
 	o evas-edb-1.7.10
 	o evas-eet-1.7.10
