@@ -1,40 +1,0 @@
-@comment $NetBSD: PLIST,v 1.9 2011/08/06 23:22:15 ryoon Exp $
-bin/e.py
-bin/e.pyw
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/etm/__init__.py
-${PYSITELIB}/etm/__init__.pyc
-${PYSITELIB}/etm/__init__.pyo
-${PYSITELIB}/etm/etmData.py
-${PYSITELIB}/etm/etmData.pyc
-${PYSITELIB}/etm/etmData.pyo
-${PYSITELIB}/etm/etmHTML.py
-${PYSITELIB}/etm/etmHTML.pyc
-${PYSITELIB}/etm/etmHTML.pyo
-${PYSITELIB}/etm/etmHelp.py
-${PYSITELIB}/etm/etmHelp.pyc
-${PYSITELIB}/etm/etmHelp.pyo
-${PYSITELIB}/etm/etmInfo.py
-${PYSITELIB}/etm/etmInfo.pyc
-${PYSITELIB}/etm/etmInfo.pyo
-${PYSITELIB}/etm/etmParsers.py
-${PYSITELIB}/etm/etmParsers.pyc
-${PYSITELIB}/etm/etmParsers.pyo
-${PYSITELIB}/etm/etmRC.py
-${PYSITELIB}/etm/etmRC.pyc
-${PYSITELIB}/etm/etmRC.pyo
-${PYSITELIB}/etm/etmVersion.py
-${PYSITELIB}/etm/etmVersion.pyc
-${PYSITELIB}/etm/etmVersion.pyo
-${PYSITELIB}/etm/etmWX.py
-${PYSITELIB}/etm/etmWX.pyc
-${PYSITELIB}/etm/etmWX.pyo
-${PYSITELIB}/etm/etm_alert.wav
-${PYSITELIB}/etm/etmlogo.ico
-${PYSITELIB}/etm/etmlogo_128x128x32.png
-${PYSITELIB}/etm/etmlogo_16x16x32.png
-${PYSITELIB}/etm/etmlogo_32x32x32.png
