@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.24 2021/10/26 11:24:18 nia Exp $
-
-BLAKE2s (etm-877.tar.gz) = 3ec7c9574b0e765ad64380ef8210b45e6d9951c9ff8ebc5c1b7d29f4f4ec4463
-SHA512 (etm-877.tar.gz) = 4ab7e3a43b153629a16c5d47c16019a9ea4edbe5851b59210880042d27c1b2391c0a8e55b649b27644686864628aa7b2fc34765584968fab9135ae7bc469e7aa
-Size (etm-877.tar.gz) = 192878 bytes
