@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.2800 2023/05/04 11:43:42 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.2801 2023/05/04 11:47:34 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -3897,3 +3897,5 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated security/py-cyclonedx-python-lib to 4.0.0 [wiz 2023-05-04]
 	Added devel/py-serializable version 0.12.0 [wiz 2023-05-04]
 	Updated security/py-google-auth to 2.17.3 [wiz 2023-05-04]
+	Removed time/etm [wiz 2023-05-04]
+	Removed time/etm [wiz 2023-05-04]
